--- a/index.html
+++ b/index.html
@@ -260,7 +260,10 @@ footer h6{
     font-size: 15px;
     cursor: pointer;
 }
-
+.buttons button:hover{
+    color:rgb(225, 163, 48);
+    cursor: pointer;
+}
 /* Responsive Styles */
 /* @media (max-width: 1100px) {
     .main h2{
@@ -603,7 +606,7 @@ footer h6{
         <h2>Welcome to FastFood!</h2>
         <h2>Delicous Food is <span>waiting for you</span></h2>
         <p>Your favorite food, delivered fast and fresh! Explore our delicious<br> menu and get started on with culinary adventure today!</p>
-        <div>
+        <div class="buttons">
             <button>Order now</button>
             <button>Book a Table</button>
         </div>
