--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ footer h6{
     cursor: pointer;
 }
 .buttons button:hover{
-    color:rgb(225, 163, 48);
+    background-color:rgb(235, 178, 74);
     cursor: pointer;
 }
 /* Responsive Styles */
